@@ -7,5 +7,4 @@ from .work import *
 def register():
     Pool.register(
         Project,
-        Maintenance,
         module='asset_work_project', type_='model')
