@@ -2,12 +2,9 @@
 <!-- The COPYRIGHT file at the top level of this repository contains the full
      copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/label[@name='maintenance']" position="before">
+    <xpath expr="/form/label[@name='start_date']" position="before">
         <label name="asset"/>
         <field name="asset"/>
-    </xpath>
-    <xpath expr="/form/field[@name='maintenance']" position="after">
-        <label name="category"/>
-        <field name="category"/>
+        <newline/>
     </xpath>
 </data>
